--- a/src/components/editFiltersPopup/popup.module.css
+++ b/src/components/editFiltersPopup/popup.module.css
@@ -80,7 +80,7 @@
 
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   background: white;
@@ -88,7 +88,6 @@
 }
 
 .popupSectionRowText {
-  margin-right: auto;
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 20px;
@@ -100,7 +99,6 @@
 }
 
 .popupSectionRowSwitch {
-  margin-left: auto;
   margin-top: 10px;
   margin-bottom: 10px;
   margin-right: 20px;
